Add loading and list screens. Preparing details screen.

--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,21 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>BlissApp</title>
+  <title>Bliss Recruitment App | Sérgio Fernandes</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+<!-- <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
 <script src="node_modules/systemjs/dist/system.src.js"></script>
 <script src="node_modules/rxjs/bundles/Rx.js"></script>
 <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-<script src="node_modules/angular2/bundles/http.dev.js"></script>
+<script src="node_modules/angular2/bundles/http.dev.js"></script> -->
+
 <link rel="icon" type="image/x-icon" href="favicon.ico">
+<!-- <link rel="stylesheet" href="node_modules/loaders.css/loaders.min.css"> -->
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
 </html>
